@@ -194,6 +194,39 @@ sub annotation {
     return $self->{annotation} ;
 }
 
+=head2 load_pod_annotation ( pod_string )
+
+Load annoatation in configuration tree from a pod document. The pod must be in the form:
+
+ =over
+ 
+ =item path
+ 
+ Annotation tested
+ 
+ =back
+ 
+=cut
+
+sub load_pod_annotation {
+    my $self = shift ;
+    my $pod = shift ;
+    
+    # could use Pod::POM, but it's overkill... for now
+    my $obj ;
+    foreach (split /\n+/ , $pod ) {
+        if (s/=item//) {
+            $obj = $self->grab(step => "! $_") ; # FIXME the '!' is dangerous if the pod was not generated from a root node ....
+        }
+        elsif (/=(over|back)/) {
+            # nothing 
+        }
+        else {
+            $obj->annotation($_) ;
+        }
+    }
+}
+
 =head1 Information management
 
 =head2 grab(...)
